-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.1, 5.8.0
-
None
-
Debian sid/testing
-
3c59065d5cb5f82f90ed2e830e10c5807deeaf2c
Original bug: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=841951
The problem is basically that src/platformsupport/glxconvenience/qglxconvenience.cpp::208 is not checked for NULL. It seems our user has an issue with his video card/software stack.
Anthony Towns created a simple test case for the user to reproduce:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=841951#32 and https://bugs.debian.org/cgi-bin/bugreport.cgi?att=1;bug=841951;filename=test.cpp;msg=32
which returns NULL in one case:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=841951#58
So I don't know for sure where is the real bug, but I think this line should be checked for NULL at least to avoid the crash. Before submitting the one-liner that fixes it I would like to know if you want some more info to debug this.
- relates to
-
QTBUG-81904 [REG: 5.11.3->5.12.5] Flickering when alpha channel is requested, but there is no such visual
-
- Closed
-
| For Gerrit Dashboard: QTBUG-58910 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 186122,1 | add null pointer check in qglx_findConfig | 5.9 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 205268,4 | qglxconvenience: Avoid null pointer dereference | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |